--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,26 @@
+Babel==2.8.0
+blinker==1.4
 certifi==2019.11.28
-Click==7.0
+click==7.1.1
 Flask==1.1.1
+Flask-BabelEx==0.9.4
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
 flask-mongoengine==0.9.5
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 mongoengine==0.19.1
+passlib==1.7.2
 pymongo==3.10.1
+python-dateutil==2.8.1
 python-dotenv==0.12.0
+pytz==2019.3
 six==1.14.0
+speaklater==1.3
 Werkzeug==1.0.0
 wincertstore==0.2
 WTForms==2.2.1
